# openstack-resources-explorer

./: .gitignore  README.md  clouds.yaml.example  pyproject.toml  requirements.txt
docs/: graph_schema.md
src/os_explorer/: cli.py  config.py
src/os_explorer/discovery/: base.py  block_storage.py  compute.py  dns.py  heat.py  image.py  loadbalancer.py  network.py
src/os_explorer/graph/: builder.py  model.py
src/os_explorer/ui/: table.py  tree.py
src/os_explorer/utils/: logging.py
src/os_explorer/web/: api.py  main.py
tests/fixtures/: sample_graph.json
tests/unit/: test_discovery.py  test_graph_builder.py
web_ui/: package-lock.json  package.json
web_ui/src/: App.jsx
web_ui/src/components/: ResourceDetails.jsx  ResourceGraph.jsx  ResourceRelations.jsx  ResourceTree.jsx
